tests/paczka1/small_fuzzy/72369384.err
Error in line 2: tw1 S178 15,3
Error in line 7: RAinKniJX A753 67,5
